5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4496/executions/1798_2566.log
== TEST (2019-06-10 12:48:28) 
-- CODE:
from numpy import*
f = array(eval(input("faltas do dia: "))).split(".")

cont = zeros(6, dtype=int)

for i in range(size(mf)):
	if(f[i] >= 5 and [i] >= (75/100)*ch):
		cont[0] = cont[0] + 1
	elif(f[i] < 5 and [i] >= (75/100)*ch):	
		cont[1] = cont[1] + 1
	elif(f[i] >= 5 and [i] < (75/100)*ch):
		cont[2] = cont[2] + 1
	elif(f[i] >= 5 and [i] < (75/100)*ch):
		cont[3] = cont[3] + 1
	elif(f[i] >= 5 and [i] < (75/100)*ch):
		cont[4] = cont[4] + 1
	elif(f[i] >= 5 and [i] < (75/100)*ch):
		cont[5] = cont[5] + 1
print(cont)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:54:15) 
-- CODE:
from numpy import*
f = array(eval(input("faltas do dia: "))).split('.')

cont = zeros(6, dtype=int)

for i in range(size(mf)):
	if(f[i] >= 5 and [i] >= (75/100)*ch):
		cont[0] = cont[0] + 1
	elif(f[i] < 5 and [i] >= (75/100)*ch):	
		cont[1] = cont[1] + 1
	elif(f[i] >= 5 and [i] < (75/100)*ch):
		cont[2] = cont[2] + 1
	elif(f[i] >= 5 and [i] < (75/100)*ch):
		cont[3] = cont[3] + 1
	elif(f[i] >= 5 and [i] < (75/100)*ch):
		cont[4] = cont[4] + 1
	elif(f[i] >= 5 and [i] < (75/100)*ch):
		cont[5] = cont[5] + 1
print(cont)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:55:12) 
-- CODE:
from numpy import*
f = input("faltas do dia: "))).split('.')

cont = zeros(6, dtype=int)

for i in range(size(mf)):
	if(f[i] >= 5 and [i] >= (75/100)*ch):
		cont[0] = cont[0] + 1
	elif(f[i] < 5 and [i] >= (75/100)*ch):	
		cont[1] = cont[1] + 1
	elif(f[i] >= 5 and [i] < (75/100)*ch):
		cont[2] = cont[2] + 1
	elif(f[i] >= 5 and [i] < (75/100)*ch):
		cont[3] = cont[3] + 1
	elif(f[i] >= 5 and [i] < (75/100)*ch):
		cont[4] = cont[4] + 1
	elif(f[i] >= 5 and [i] < (75/100)*ch):
		cont[5] = cont[5] + 1
print(cont)
		
-- ERROR:
File "XXXX", line 2
    f = input())).split('.')
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:23:52) 
-- CODE:
from numpy import*
f = array(eval(input("faltas do dia: "))).split('.')
d = zeros(6, dtype=int)

for i in f:
	if(d[i] == 2):
		d[0] = p[0] + 1
	elif(d[i] == 3):	
		d[1] = d[1] + 1
	elif(p[i] == 4):	
		d[2] = d[2] + 1
	elif(d[i] == 5):	
		d[3] = d[3] + 1
	elif(d[i] == 6):	
		d[4] = d[4] + 1
	elif(d[i] == 7):	
		d[5] = d[5] + 1
		
for i in p:
		
print(cont)
		
-- ERROR:
File "XXXX", line 21
    print(cont)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:24:00) 
-- CODE:
from numpy import*
f = array(eval(input("faltas do dia: "))).split('.')
d = zeros(6, dtype=int)

for i in f:
	if(d[i] == 2):
		d[0] = p[0] + 1
	elif(d[i] == 3):	
		d[1] = d[1] + 1
	elif(p[i] == 4):	
		d[2] = d[2] + 1
	elif(d[i] == 5):	
		d[3] = d[3] + 1
	elif(d[i] == 6):	
		d[4] = d[4] + 1
	elif(d[i] == 7):	
		d[5] = d[5] + 1
		
for i in p:
		
print(d)
		
-- ERROR:
File "XXXX", line 21
    print(d)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:33:32) 
-- CODE:
from numpy import*
f = array(eval(input("faltas do dia: ")))
d = zeros(6, dtype=int)

for i in f:
	if(d[i] == 2):
		d[0] = p[0] + 1
	elif(d[i] == 3):
		d[1] = d[1] + 1
	elif(p[i] == 4):
		d[2] = d[2] + 1
	elif(d[i] == 5):
		d[3] = d[3] + 1
	elif(d[i] == 6):
		d[4] = d[4] + 1
	elif(d[i] == 7):
		d[5] = d[5] + 1
		
for i in p:
	s[i] = sum(d)
	p = 0
	j = (s[p] * 100/s)
	
		
print(d)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:34:28) 
-- CODE:
from numpy import*
f = array(eval(input("faltas do dia: ")))
d = zeros(6, dtype=int)

for i in f:
	if(d[i] == 2):
		d[0] = p[0] + 1
	elif(d[i] == 3):
		d[1] = d[1] + 1
	elif(d[i] == 4):
		d[2] = d[2] + 1
	elif(d[i] == 5):
		d[3] = d[3] + 1
	elif(d[i] == 6):
		d[4] = d[4] + 1
	elif(d[i] == 7):
		d[5] = d[5] + 1
		
for i in p:
	s[i] = sum(d)
	p = 0
	j = (s[p] * 100/s)
	
		
print(d)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:35:16) 
-- CODE:
from numpy import*
f = array(eval(input("faltas do dia: ")))
d = zeros(6, dtype=int)

for i in f:
	if(d[i] == 2):
		d[0] = d[0] + 1
	elif(d[i] == 3):
		d[1] = d[1] + 1
	elif(d[i] == 4):
		d[2] = d[2] + 1
	elif(d[i] == 5):
		d[3] = d[3] + 1
	elif(d[i] == 6):
		d[4] = d[4] + 1
	elif(d[i] == 7):
		d[5] = d[5] + 1
		
for i in p:
	s[i] = sum(d)
	p = 0
	j = (s[p] * 100/s)
	
		
print(d)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:29:59) 
-- CODE:
from numpy import*
f = array(eval(input("faltas do dia: ")))
d = zeros(6, dtype=int)

for i in d:
	if(d[i] == 2):
		d[0] = d[0] + 1
	elif(d[i] == 3):
		d[1] = d[1] + 1
	elif(d[i] == 4):
		d[2] = d[2] + 1
	elif(d[i] == 5):
		d[3] = d[3] + 1
	elif(d[i] == 6):
		d[4] = d[4] + 1
	elif(d[i] == 7):
		d[5] = d[5] + 1
		
for i in p:
	s[i] = sum(d)
	p = 0
	j = (s[p] * 100/s)
	
		
print(d)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:30:36) 
-- CODE:
from numpy import*
f = array(eval(input("faltas do dia: ")))
d = zeros(6, dtype=int)

for i in f:
	if(d[i] == 2):
		d[0] = d[0] + 1
	elif(d[i] == 3):
		d[1] = d[1] + 1
	elif(d[i] == 4):
		d[2] = d[2] + 1
	elif(d[i] == 5):
		d[3] = d[3] + 1
	elif(d[i] == 6):
		d[4] = d[4] + 1
	elif(d[i] == 7):
		d[5] = d[5] + 1
		
for i in d:
	s[i] = sum(d)
	p = 0
	j = (s[p] * 100/s)
	
		
print(d)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 14:58:50) 
-- CODE:
from numpy import*
f = array(eval(input("faltas do dia: ")))
d = zeros(6, dtype=int)

for i in f:
	if(d[i] == 2):
		d[0] = d[0] + 1
	elif(d[i] == 3):
		d[1] = d[1] + 1
	elif(d[i] == 4):
		d[2] = d[2] + 1
	elif(d[i] == 5):
		d[3] = d[3] + 1
	elif(d[i] == 6):
		d[4] = d[4] + 1
	elif(d[i] == 7):
		d[5] = d[5] + 1
		
for i in d:
	s[i] = sum(d)
	p = 0
	j = (s[d] * 100/s)
	
		
print(d)
		
-- EXECUTION TIME:
1.18567
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2566/main.py", line 6, in <module>
    if(d[i] == 2):
IndexError: index 6 is out of bounds for axis 0 with size 6

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 14:59:29) 
-- CODE:
from numpy import*
f = array(eval(input("faltas do dia: ")))
d = zeros(6, dtype=int)

for i in f:
	if(d[i] == 2):
		d[0] = d[0] + 1
	elif(d[i] == 3):
		d[1] = d[1] + 1
	elif(d[i] == 4):
		d[2] = d[2] + 1
	elif(d[i] == 5):
		d[3] = d[3] + 1
	elif(d[i] == 6):
		d[4] = d[4] + 1
	elif(d[i] == 7):
		d[5] = d[5] + 1
		
for i in d:
	s[i] = sum(d)
	p = 0
	j = round((s[d] * 100/s),1)
	
		
print(d)
		
-- EXECUTION TIME:
1.02003
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2566/main.py", line 6, in <module>
    if(d[i] == 2):
IndexError: index 6 is out of bounds for axis 0 with size 6

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:25:30) 
-- CODE:
from numpy import*
f = array(eval(input("faltas do dia: ")))
d = zeros(6, dtype=float)
seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for i in f:
	if f[i] == 2:
		seg = seg + 1
	elif f[i] == 3:
		ter = ter + 1
	elif f[i] == 4:
		qua = qua + 1
	elif f[i] == 5
		qui = qui + 1
	elif f[i] == 6:
		sex = sex + 1
	elif f[i] == 7:
		sab = sab + 1

a = seg + ter + qua + qui + sex + sab
p = zeros(6, dtype=float)
for i in d:
	p[0] = round(((seg/a)*100), 1)
	p[0] = round(((ter/a)*100), 1)
	p[0] = round(((qua/a)*100), 1)
	p[0] = round(((qui/a)*100), 1)
	p[0] = round(((sex/a)*100), 1)
	p[0] = round(((sab/a)*100), 1)
				
print(p)
		
-- ERROR:
File "XXXX", line 18
    elif f[i] == 5
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:25:45) 
-- CODE:
from numpy import*
f = array(eval(input("faltas do dia: ")))
d = zeros(6, dtype=float)
seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for i in f:
	if f[i] == 2:
		seg = seg + 1
	elif f[i] == 3:
		ter = ter + 1
	elif f[i] == 4:
		qua = qua + 1
	elif f[i] == 5:
		qui = qui + 1
	elif f[i] == 6:
		sex = sex + 1
	elif f[i] == 7:
		sab = sab + 1

a = seg + ter + qua + qui + sex + sab
p = zeros(6, dtype=float)
for i in d:
	p[0] = round(((seg/a)*100), 1)
	p[0] = round(((ter/a)*100), 1)
	p[0] = round(((qua/a)*100), 1)
	p[0] = round(((qui/a)*100), 1)
	p[0] = round(((sex/a)*100), 1)
	p[0] = round(((sab/a)*100), 1)
				
print(p)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:25:47) 
-- CODE:
from numpy import*
f = array(eval(input("faltas do dia: ")))
d = zeros(6, dtype=float)
seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for i in f:
	if f[i] == 2:
		seg = seg + 1
	elif f[i] == 3:
		ter = ter + 1
	elif f[i] == 4:
		qua = qua + 1
	elif f[i] == 5:
		qui = qui + 1
	elif f[i] == 6:
		sex = sex + 1
	elif f[i] == 7:
		sab = sab + 1

a = seg + ter + qua + qui + sex + sab
p = zeros(6, dtype=float)
for i in d:
	p[0] = round(((seg/a)*100), 1)
	p[0] = round(((ter/a)*100), 1)
	p[0] = round(((qua/a)*100), 1)
	p[0] = round(((qui/a)*100), 1)
	p[0] = round(((sex/a)*100), 1)
	p[0] = round(((sab/a)*100), 1)
				
print(p)
		
-- EXECUTION TIME:
0.853361
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[0. 0. 0. 0. 0. 0.]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[0. 0. 0. 0. 0. 0.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
faltas do dia: [0. 0. 0. 0. 0. 0.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:27:40) 
-- CODE:
from numpy import*
f = array(eval(input("faltas do dia: ")))
d = zeros(6, dtype=float)
seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for i in f:
	if f[i] == 2:
		seg = seg + 1
	elif f[i] == 3:
		ter = ter + 1
	elif f[i] == 4:
		qua = qua + 1
	elif f[i] == 5:
		qui = qui + 1
	elif f[i] == 6:
		sex = sex + 1
	elif f[i] == 7:
		sab = sab + 1

a = seg + ter + qua + qui + sex + sab
p = zeros(6, dtype=float)
for i in d:
	p[0] = round(((seg/a)*100), 1)
	p[0] = round(((ter/a)*100), 1)
	p[0] = round(((qua/a)*100), 1)
	p[0] = round(((qui/a)*100), 1)
	p[0] = round(((sex/a)*100), 1)
	p[0] = round(((sab/a)*100), 1)
				
print(p)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:30:38) 
-- CODE:
from numpy import*
f = array(eval(input("faltas do dia: ")))
d = zeros(6, dtype=float)
seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for i in f:
	if f[i] == 2:
		seg = seg + 1
	elif f[i] == 3:
		ter = ter + 1
	elif f[i] == 4:
		qua = qua + 1
	elif f[i] == 5:
		qui = qui + 1
	elif f[i] == 6:
		sex = sex + 1
	elif f[i] == 7:
		sab = sab + 1

a = seg + ter + qua + qui + sex + sab
p = zeros(6, dtype=float)
for i in d:
	p[0] = round(((seg/a)*100), 1)
	p[0] = round(((ter/a)*100), 1)
	p[0] = round(((qua/a)*100), 1)
	p[0] = round(((qui/a)*100), 1)
	p[0] = round(((sex/a)*100), 1)
	p[0] = round(((sab/a)*100), 1)
				
print(p)
		
-- EXECUTION TIME:
1.24189
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[0. 0. 0. 0. 0. 0.]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[0. 0. 0. 0. 0. 0.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[0. 0. 0. 0. 0. 0.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:30:38) 
-- CODE:
from numpy import*
f = array(eval(input("faltas do dia: ")))
d = zeros(6, dtype=float)
seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for i in f:
	if f[i] == 2:
		seg = seg + 1
	elif f[i] == 3:
		ter = ter + 1
	elif f[i] == 4:
		qua = qua + 1
	elif f[i] == 5:
		qui = qui + 1
	elif f[i] == 6:
		sex = sex + 1
	elif f[i] == 7:
		sab = sab + 1

a = seg + ter + qua + qui + sex + sab
p = zeros(6, dtype=float)
for i in d:
	p[0] = round(((seg/a)*100), 1)
	p[0] = round(((ter/a)*100), 1)
	p[0] = round(((qua/a)*100), 1)
	p[0] = round(((qui/a)*100), 1)
	p[0] = round(((sex/a)*100), 1)
	p[0] = round(((sab/a)*100), 1)
				
print(p)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:30:49) 
-- CODE:
from numpy import*
f = array(eval(input("faltas do dia: ")))
d = zeros(6, dtype=float)
seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for i in f:
	if f[i] == 2:
		seg = seg + 1
	elif f[i] == 3:
		ter = ter + 1
	elif f[i] == 4:
		qua = qua + 1
	elif f[i] == 5:
		qui = qui + 1
	elif f[i] == 6:
		sex = sex + 1
	elif f[i] == 7:
		sab = sab + 1

a = seg + ter + qua + qui + sex + sab
p = zeros(6, dtype=float)
for i in d:
	p[0] = round(((seg/a)*100), 1)
	p[0] = round(((ter/a)*100), 1)
	p[0] = round(((qua/a)*100), 1)
	p[0] = round(((qui/a)*100), 1)
	p[0] = round(((sex/a)*100), 1)
	p[0] = round(((sab/a)*100), 1)
				
print(p)
		
-- EXECUTION TIME:
1.0601
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[0. 0. 0. 0. 0. 0.]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[0. 0. 0. 0. 0. 0.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[0. 0. 0. 0. 0. 0.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:31:05) 
-- CODE:
from numpy import*
f = array(eval(input("faltas do dia: ")))
seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for i in f:
	if f[i] == 2:
		seg = seg + 1
	elif f[i] == 3:
		ter = ter + 1
	elif f[i] == 4:
		qua = qua + 1
	elif f[i] == 5:
		qui = qui + 1
	elif f[i] == 6:
		sex = sex + 1
	elif f[i] == 7:
		sab = sab + 1

a = seg + ter + qua + qui + sex + sab
p = zeros(6, dtype=float)
for i in d:
	p[0] = round(((seg/a)*100), 1)
	p[0] = round(((ter/a)*100), 1)
	p[0] = round(((qua/a)*100), 1)
	p[0] = round(((qui/a)*100), 1)
	p[0] = round(((sex/a)*100), 1)
	p[0] = round(((sab/a)*100), 1)
				
print(p)
		
-- EXECUTION TIME:
1.01047
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2566/main.py", line 26, in <module>
    for i in d:
NameError: name 'd' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:32:04) 
-- CODE:
from numpy import*
f = array(eval(input("faltas do dia: ")))
seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for i in f:
	if f[i] == 2:
		seg = seg + 1
	elif f[i] == 3:
		ter = ter + 1
	elif f[i] == 4:
		qua = qua + 1
	elif f[i] == 5:
		qui = qui + 1
	elif f[i] == 6:
		sex = sex + 1
	elif f[i] == 7:
		sab = sab + 1

a = seg + ter + qua + qui + sex + sab
p = zeros(6, dtype=float)
for i in p:
	p[0] = round(((seg/a)*100), 1)
	p[0] = round(((ter/a)*100), 1)
	p[0] = round(((qua/a)*100), 1)
	p[0] = round(((qui/a)*100), 1)
	p[0] = round(((sex/a)*100), 1)
	p[0] = round(((sab/a)*100), 1)
				
print(p)
		
-- EXECUTION TIME:
1.04491
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[0. 0. 0. 0. 0. 0.]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[0. 0. 0. 0. 0. 0.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
faltas do dia: [0. 0. 0. 0. 0. 0.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:32:07) 
-- CODE:
from numpy import*
f = array(eval(input("faltas do dia: ")))
seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for i in f:
	if f[i] == 2:
		seg = seg + 1
	elif f[i] == 3:
		ter = ter + 1
	elif f[i] == 4:
		qua = qua + 1
	elif f[i] == 5:
		qui = qui + 1
	elif f[i] == 6:
		sex = sex + 1
	elif f[i] == 7:
		sab = sab + 1

a = seg + ter + qua + qui + sex + sab
p = zeros(6, dtype=float)
for i in p:
	p[0] = round(((seg/a)*100), 1)
	p[0] = round(((ter/a)*100), 1)
	p[0] = round(((qua/a)*100), 1)
	p[0] = round(((qui/a)*100), 1)
	p[0] = round(((sex/a)*100), 1)
	p[0] = round(((sab/a)*100), 1)
				
print(p)
		
-- EXECUTION TIME:
0.957046
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[0. 0. 0. 0. 0. 0.]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[0. 0. 0. 0. 0. 0.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[0. 0. 0. 0. 0. 0.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:34:42) 
-- CODE:
from numpy import*
f = array(eval(input("faltas do dia: ")))
seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for i in f:
	if f[i] == 2:
		seg = seg + 1
	elif f[i] == 3:
		ter = ter + 1
	elif f[i] == 4:
		qua = qua + 1
	elif f[i] == 5:
		qui = qui + 1
	elif f[i] == 6:
		sex = sex + 1
	elif f[i] == 7:
		sab = sab + 1

a = seg + ter + qua + qui + sex + sab
p = zeros(6, dtype=float)
for i in p:
	p[0] = round(((seg/a)*100), 1)
	p[0] = round(((ter/a)*100), 1)
	p[0] = round(((qua/a)*100), 1)
	p[0] = round(((qui/a)*100), 1)
	p[0] = round(((sex/a)*100), 1)
	p[0] = round(((sab/a)*100), 1)
				
print(p)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:35:03) 
-- CODE:
from numpy import*
f = array(eval(input("faltas do dia: ")))
seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for i in f:
	if f[i] == 2:
		seg = seg + 1
	elif f[i] == 3:
		ter = ter + 1
	elif f[i] == 4:
		qua = qua + 1
	elif f[i] == 5:
		qui = qui + 1
	elif f[i] == 6:
		sex = sex + 1
	elif f[i] == 7:
		sab = sab + 1

a = seg + ter + qua + qui + sex + sab
p = zeros(6, dtype=float)
for i in p:
	p[0] = round(((seg/a)*100), 1)
	p[0] = round(((ter/a)*100), 1)
	p[0] = round(((qua/a)*100), 1)
	p[0] = round(((qui/a)*100), 1)
	p[0] = round(((sex/a)*100), 1)
	p[0] = round(((sab/a)*100), 1)
				
print(p)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:37:07) 
-- CODE:
from numpy import*
f = array(eval(input("faltas do dia: ")))
seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for i in range(size(f)):
	if f[i] == 2:
		seg = seg + 1
	elif f[i] == 3:
		ter = ter + 1
	elif f[i] == 4:
		qua = qua + 1
	elif f[i] == 5:
		qui = qui + 1
	elif f[i] == 6:
		sex = sex + 1
	elif f[i] == 7:
		sab = sab + 1

a = seg + ter + qua + qui + sex + sab
p = zeros(6, dtype=float)
for i in p:
	p[0] = round(((seg/a)*100), 1)
	p[1] = round(((ter/a)*100), 1)
	p[2] = round(((qua/a)*100), 1)
	p[3] = round(((qui/a)*100), 1)
	p[4] = round(((sex/a)*100), 1)
	p[5] = round(((sab/a)*100), 1)
				
print(p)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:37:26) 
-- CODE:
from numpy import*
f = array(eval(input("faltas do dia: ")))
seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for i in range(size(f)):
	if f[i] == 2:
		seg = seg + 1
	elif f[i] == 3:
		ter = ter + 1
	elif f[i] == 4:
		qua = qua + 1
	elif f[i] == 5:
		qui = qui + 1
	elif f[i] == 6:
		sex = sex + 1
	elif f[i] == 7:
		sab = sab + 1

a = seg + ter + qua + qui + sex + sab
p = zeros(6, dtype=float)
for i in p:
	p[0] = round(((seg/a)*100), 1)
	p[1] = round(((ter/a)*100), 1)
	p[2] = round(((qua/a)*100), 1)
	p[3] = round(((qui/a)*100), 1)
	p[4] = round(((sex/a)*100), 1)
	p[5] = round(((sab/a)*100), 1)
				
print(p)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:37:36) 
-- CODE:
from numpy import*
f = array(eval(input("faltas do dia: ")))
seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for i in range(size(f)):
	if f[i] == 2:
		seg = seg + 1
	elif f[i] == 3:
		ter = ter + 1
	elif f[i] == 4:
		qua = qua + 1
	elif f[i] == 5:
		qui = qui + 1
	elif f[i] == 6:
		sex = sex + 1
	elif f[i] == 7:
		sab = sab + 1

a = seg + ter + qua + qui + sex + sab
p = zeros(6, dtype=float)
for i in p:
	p[0] = round(((seg/a)*100), 1)
	p[1] = round(((ter/a)*100), 1)
	p[2] = round(((qua/a)*100), 1)
	p[3] = round(((qui/a)*100), 1)
	p[4] = round(((sex/a)*100), 1)
	p[5] = round(((sab/a)*100), 1)
				
print(p)
		
-- EXECUTION TIME:
1.05098
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
